Fix import of local json file, Reduce size of text-area in request panel, so the headers are always visible.

--- a/tomp-api-web-app/src/app/components/request/request.component.scss
+++ b/tomp-api-web-app/src/app/components/request/request.component.scss
@@ -10,7 +10,7 @@
     width: 100%;
     overflow-y: auto;
     .text-area {
-      height: calc(100vh - 370px);
+      height: calc(100vh - 630px);
     }
   }
   
